--- a/uwavesDeck3PlaneWavesLossyMaterialProblem.tex
+++ b/uwavesDeck3PlaneWavesLossyMaterialProblem.tex
@@ -7,46 +7,50 @@
 
 Eliminating \( \alpha \), and letting \( a = \omega^2 \mu \), we have
 
-\begin{dmath}\label{eqn:uwavesDeck3PlaneWavesLossyMaterial:620}
+\begin{equation}\label{eqn:uwavesDeck3PlaneWavesLossyMaterial:620}
 \lr{ \frac{a \epsilon''}{2 \beta} }^2 - \beta^2 = - a \epsilon',
-\end{dmath}
+\end{equation}
 
 or
 
-\begin{dmath}\label{eqn:uwavesDeck3PlaneWavesLossyMaterial:640}
+\begin{equation}\label{eqn:uwavesDeck3PlaneWavesLossyMaterial:640}
 \frac{a^2 (\epsilon'')^2}{4} - \beta^4 = - a \epsilon' \beta^2
-\end{dmath}
+\end{equation}
 
 or
-\begin{dmath}\label{eqn:uwavesDeck3PlaneWavesLossyMaterial:660}
+\begin{equation}\label{eqn:uwavesDeck3PlaneWavesLossyMaterial:660}
 \frac{a^2 (\epsilon'')^2}{4}
 =
 \beta^4 - a \epsilon' \beta^2
-\end{dmath}
+\end{equation}
 
 or
 
-\begin{dmath}\label{eqn:uwavesDeck3PlaneWavesLossyMaterial:680}
+\begin{equation}\label{eqn:uwavesDeck3PlaneWavesLossyMaterial:680}
+\begin{aligned}
 \lr{ \beta^2 - \frac{a \epsilon'}{2} }^2
-=
+&=
 \frac{a^2 (\epsilon'')^2}{4} + \frac{a^2 (\epsilon')^2}{4}
-=
+\\ &=
 \frac{a^2}{4} \lr{ (\epsilon'')^2 + (\epsilon')^2 }
-\end{dmath}
+\end{aligned}
+\end{equation}
 
 This gives
-\begin{dmath}\label{eqn:uwavesDeck3PlaneWavesLossyMaterial:700}
+\begin{equation}\label{eqn:uwavesDeck3PlaneWavesLossyMaterial:700}
+\begin{aligned}
 \beta^2
-= \frac{a \epsilon'}{2} + \frac{a }{2} \sqrt{ (\epsilon'')^2 + (\epsilon')^2 }
-= \frac{a \epsilon'}{2} \lr{ 1 + \sqrt{ 1 + \frac{(\epsilon'')^2}{{(\epsilon')^2} } } },
-\end{dmath}
+&= \frac{a \epsilon'}{2} + \frac{a }{2} \sqrt{ (\epsilon'')^2 + (\epsilon')^2 }
+\\ &= \frac{a \epsilon'}{2} \lr{ 1 + \sqrt{ 1 + \frac{(\epsilon'')^2}{{(\epsilon')^2} } } },
+\end{aligned}
+\end{equation}
 
 or
 
-\begin{dmath}\label{eqn:uwavesDeck3PlaneWavesLossyMaterial:720}
+\begin{equation}\label{eqn:uwavesDeck3PlaneWavesLossyMaterial:720}
 \beta
 = \omega^2 \mu \sqrt{ \frac{a \epsilon'}{2} \lr{ 1 + \sqrt{ 1 + \frac{(\epsilon'')^2}{{(\epsilon')^2} } } } },
-\end{dmath}
+\end{equation}
 
 as stated.  Solving for \( \alpha \) can be done by inspection from \cref{eqn:uwavesDeck3PlaneWavesLossyMaterial:700} and \cref{eqn:uwavesDeck3PlaneWavesLossyMaterial:620}.
 
