--- a/averagePowerCircuitElements.tex
+++ b/averagePowerCircuitElements.tex
@@ -45,24 +45,26 @@ v(t) = R i(t)
 
 the average power lost to a resistor is
 
-\begin{dmath}\label{eqn:averagePowerCircuitElements:60}
+\begin{equation}\label{eqn:averagePowerCircuitElements:60}
+\begin{aligned}
 p_\txtR
-= \inv{T} \int_0^T v(t) i(t) dt
-= \inv{T} \int_0^T \Real( V e^{j \omega t} ) \Real( I e^{j \omega t} ) dt
-= \inv{4 T} \int_0^T
+&= \inv{T} \int_0^T v(t) i(t) dt
+\\ &= \inv{T} \int_0^T \Real( V e^{j \omega t} ) \Real( I e^{j \omega t} ) dt
+\\ &= \inv{4 T} \int_0^T
 \lr{V e^{j \omega t} + V^\conj e^{-j \omega t} }
 \lr{I e^{j \omega t} + I^\conj e^{-j \omega t} }
 dt
-= \inv{4 T} \int_0^T
+\\ &= \inv{4 T} \int_0^T
 \lr{
 V I e^{2 j \omega t} + V^\conj I^\conj e^{-2 j \omega t}
 + V I^\conj + V^\conj I
 }
 dt
-= \inv{2} \Real( V I^\conj )
-= \inv{2} \Real( I R I^\conj )
-= \frac{R}{2} \Abs{I}^2.
-\end{dmath}
+\\ &= \inv{2} \Real( V I^\conj )
+\\ &= \inv{2} \Real( I R I^\conj )
+\\ &= \frac{R}{2} \Abs{I}^2.
+\end{aligned}
+\end{equation}
 
 Here it is assumed that the averaging is done over some integer multiple of the period, which kills off all the exponentials.
 
@@ -71,34 +73,40 @@ Here it is assumed that the averaging is done over some integer multiple of the 
 
 I tried the same sort of analysis for a capacitor in phasor form, but everything canceled out.  Referring to \citep{irwin2007bec}, the approach used to figure this out is to operate first strictly in the time domain.  Specifically, for the capacitor where \( i = C dv/dt \) the power supplied up to a time \( t \) is
 
-\begin{dmath}\label{eqn:averagePowerCircuitElements:80}
+\begin{equation}\label{eqn:averagePowerCircuitElements:80}
+\begin{aligned}
 p_\txtC(t)
-= \int_{-\infty}^t C \frac{dv}{dt} v(t) dt
-= \inv{2} C v^2(t).
-\end{dmath}
+&= \int_{-\infty}^t C \frac{dv}{dt} v(t) dt
+\\ &= \inv{2} C v^2(t).
+\end{aligned}
+\end{equation}
 
 The \( v^2(t) \) term can now be expanded in terms of phasors and averaged for
 
-\begin{dmath}\label{eqn:averagePowerCircuitElements:100}
+\begin{equation}\label{eqn:averagePowerCircuitElements:100}
+\begin{aligned}
 \overbar{p}_\txtC
-= \frac{C}{2T} \int_0^T \inv{4}
+&= \frac{C}{2T} \int_0^T \inv{4}
 \lr{ V e^{j \omega t} + V^\conj e^{-j \omega t} }
 \lr{ V e^{j \omega t} + V^\conj e^{-j \omega t} } dt
-= \frac{C}{2T} \int_0^T \inv{4}
+\\ &= \frac{C}{2T} \int_0^T \inv{4}
 2 \Abs{V}^2 dt
-= \frac{C}{4} \Abs{V}^2.
-\end{dmath}
+\\ &= \frac{C}{4} \Abs{V}^2.
+\end{aligned}
+\end{equation}
 
 \paragraph{Energy stored in an inductor}
 \index{energy!inductor}
 
 The inductor energy is found the same way, with
 
-\begin{dmath}\label{eqn:averagePowerCircuitElements:120}
+\begin{equation}\label{eqn:averagePowerCircuitElements:120}
+\begin{aligned}
 p_\txtL(t)
-= \int_{-\infty}^t L \frac{di}{dt} i(t) dt
-= \inv{2} L i^2(t),
-\end{dmath}
+&= \int_{-\infty}^t L \frac{di}{dt} i(t) dt
+\\ &= \inv{2} L i^2(t),
+\end{aligned}
+\end{equation}
 
 which leads to
 
@@ -118,12 +126,14 @@ G = \frac{I}{V} = \inv{R},
 
 so power lost due to conductance follows from power lost due to resistance.  In the average we have
 
-\begin{dmath}\label{eqn:averagePowerCircuitElements:180}
+\begin{equation}\label{eqn:averagePowerCircuitElements:180}
+\begin{aligned}
 p_\txtG
-= \inv{2 G} \Abs{I}^2
-= \inv{2 G} \Abs{V G}^2
-= \frac{G}{2} \Abs{V}^2
-\end{dmath}
+&= \inv{2 G} \Abs{I}^2
+\\ &= \inv{2 G} \Abs{V G}^2
+\\ &= \frac{G}{2} \Abs{V}^2
+\end{aligned}
+\end{equation}
 
 %}
 %\EndArticle
