--- a/uwaves4TransmissionLinesCore.tex
+++ b/uwaves4TransmissionLinesCore.tex
@@ -14,22 +14,22 @@ In \cref{fig:deck4Txline:deck4TxlineFig2}, an electronic representation of a tra
 \imageFigure{../figures/ece1236-microwaves/deck4TxlineFig2}{Transmission line equivalent circuit.}{fig:deck4Txline:deck4TxlineFig2}{0.2}
 
 In this circuit all the elements have per-unit length units.  With \( I = C dV/dt \sim j \omega C V \), \( v = I R \), and \( V = L dI/dt \sim j \omega L I \), the KVL equation is
-\begin{dmath}\label{eqn:uwaves4TransmissionLines:20}
+\begin{equation}\label{eqn:uwaves4TransmissionLines:20}
 V(z) - V(z + \Delta z) = I(z) \Delta z \lr{ R + j \omega L },
-\end{dmath}
+\end{equation}
 or in the \( \Delta z \rightarrow 0 \) limit
-\begin{dmath}\label{eqn:uwaves4TransmissionLines:40}
+\begin{equation}\label{eqn:uwaves4TransmissionLines:40}
 \PD{z}{V} = -I(z) \lr{ R + j \omega L }.
-\end{dmath}
+\end{equation}
 
 The KCL equation at the interior node is
-\begin{dmath}\label{eqn:uwaves4TransmissionLines:60}
+\begin{equation}\label{eqn:uwaves4TransmissionLines:60}
 -I(z) + I(z + \Delta z) + \lr{ j \omega C + G} V(z + \Delta z) = 0,
-\end{dmath}
+\end{equation}
 or
-\begin{dmath}\label{eqn:uwaves4TransmissionLines:80}
+\begin{equation}\label{eqn:uwaves4TransmissionLines:80}
 \PD{z}{I} = -V(z) \lr{ j \omega C + G}.
-\end{dmath}
+\end{equation}
 
 This pair of equations is known as the \textAndIndex{telegrapher's equations}
 \boxedEquation{eqn:uwaves4TransmissionLines:100}{
@@ -54,13 +54,15 @@ which allow the \( V, I \) to be decoupled
 \end{aligned}
 }
 With a complex propagation constant
-\begin{dmath}\label{eqn:uwaves4TransmissionLines:160}
+\begin{equation}\label{eqn:uwaves4TransmissionLines:160}
+\begin{aligned}
 \gamma
-= \alpha + j \beta
-= \sqrt{ \lr{ j \omega C + G} \lr{ R + j \omega L } }
-=
+&= \alpha + j \beta
+\\ &= \sqrt{ \lr{ j \omega C + G} \lr{ R + j \omega L } }
+\\ &=
 \sqrt{ R G - \omega^2 L C + j \omega ( L G + R C ) },
-\end{dmath}
+\end{aligned}
+\end{equation}
 the decouple equations have the structure of a wave equation for a lossy line in the frequency domain
 \boxedEquation{eqn:uwaves4TransmissionLines:180}{
 \begin{aligned}
@@ -78,12 +80,14 @@ I(z) &= I_0^{+} e^{-\gamma z} - I_0^{-} e^{+\gamma z} \\
 \end{equation}
 
 Only one of \( V \) or \( I \) is required since they are dependent through \cref{eqn:uwaves4TransmissionLines:100}, as can be seen by taking derivatives
-\begin{dmath}\label{eqn:uwaves4TransmissionLines:220}
+\begin{equation}\label{eqn:uwaves4TransmissionLines:220}
+\begin{aligned}
 \PD{z}{V}
-= \gamma \lr{ -V_0^{+} e^{-\gamma z} + V_0^{-} e^{+\gamma z} }
-=
+&= \gamma \lr{ -V_0^{+} e^{-\gamma z} + V_0^{-} e^{+\gamma z} }
+\\ &=
 -I(z) \lr{ R + j \omega L },
-\end{dmath}
+\end{aligned}
+\end{equation}
 so
 \begin{equation}\label{eqn:uwaves4TransmissionLines:240}
 I(z)
@@ -93,19 +97,23 @@ I(z)
 
 Introducing the characteristic impedance \( Z_0 \) of the line
 \index{characteristic impedance}
-\begin{dmath}\label{eqn:uwaves4TransmissionLines:260}
+\begin{equation}\label{eqn:uwaves4TransmissionLines:260}
+\begin{aligned}
 Z_0
-= \frac{R + j \omega L}{\gamma}
-= \sqrt{ \frac{R + j \omega L}{G + j \omega C} },
-\end{dmath}
+&= \frac{R + j \omega L}{\gamma}
+\\ &= \sqrt{ \frac{R + j \omega L}{G + j \omega C} },
+\end{aligned}
+\end{equation}
 we have
-\begin{dmath}\label{eqn:uwaves4TransmissionLines:280}
+\begin{equation}\label{eqn:uwaves4TransmissionLines:280}
+\begin{aligned}
 I(z)
-=
+&=
 \inv{Z_0} \lr{ V_0^{+} e^{-\gamma z} - V_0^{-} e^{+\gamma z} }
-=
+\\ &=
 I_0^{+} e^{-\gamma z} - I_0^{-} e^{+\gamma z},
-\end{dmath}
+\end{aligned}
+\end{equation}
 where
 \begin{equation}\label{eqn:uwaves4TransmissionLines:300}
 \begin{aligned}
@@ -119,12 +127,14 @@ From electrostatics and magnetostatics the per unit length induction and capacit
 \imageFigure{../figures/ece1236-microwaves/deck4TxlineFig3}{Coaxial cable.}{fig:deck4Txline:deck4TxlineFig3}{0.2}
 
 From Gauss' law the total charge can be calculated assuming that the ends of the cable can be neglected
-\begin{dmath}\label{eqn:uwaves4TransmissionLines:520}
+\begin{equation}\label{eqn:uwaves4TransmissionLines:520}
+\begin{aligned}
 Q
-= \int \spacegrad \cdot \BD dV
-= \oint \BD \cdot d\BA
-= \epsilon_0 \epsilon_r E ( 2 \pi r ) l,
-\end{dmath}
+&= \int \spacegrad \cdot \BD dV
+\\ &= \oint \BD \cdot d\BA
+\\ &= \epsilon_0 \epsilon_r E ( 2 \pi r ) l,
+\end{aligned}
+\end{equation}
 
 This provides the radial electric field magnitude, in terms of the total charge
 \begin{equation}\label{eqn:uwaves4TransmissionLines:320}
@@ -135,15 +145,17 @@ which must be a radial field as sketched in \cref{fig:deck4Txline:deck4TxlineFig
 \imageFigure{../figures/ece1236-microwaves/deck4TxlineFig4}{Radial electric field for coaxial cable.}{fig:deck4Txline:deck4TxlineFig4}{0.2}
 
 The potential difference from the inner transmission surface to the outer is
-\begin{dmath}\label{eqn:uwaves4TransmissionLines:340}
+\begin{equation}\label{eqn:uwaves4TransmissionLines:340}
+\begin{aligned}
 V
-= \int_a^b E dr
-=
+&= \int_a^b E dr
+\\ &=
 \frac{Q/l}{2 \pi \epsilon_0 \epsilon_r }
 \int_a^b \frac{dr}{r}
-=
+\\ &=
 \frac{Q/l}{2 \pi \epsilon_0 \epsilon_r } \ln \frac{b}{a}.
-\end{dmath}
+\end{aligned}
+\end{equation}
 
 Therefore the capacitance per unit length is
 % i = C dV/dt => \int i dt = q = C V
@@ -153,28 +165,32 @@ C = \frac{Q/l}{V} = \frac{2 \pi \epsilon_0 \epsilon_r }{ \ln \frac{b}{a} } .
 
 % V = L di/dt = d\phi/dt
 The inductance per unit length can be calculated form Ampere's law
-\begin{dmath}\label{eqn:uwaves4TransmissionLines:380}
+\begin{equation}\label{eqn:uwaves4TransmissionLines:380}
+\begin{aligned}
 \int \lr{ \spacegrad \cross \BH } \cdot d\BS
-=
+&=
 \int \BJ \cdot d\BS + \PD{t}{} \int \cancel{\BD \cdot d\Bl}
-=
+\\ &=
 I
-=
+\\ &=
 \oint \BH \cdot d\Bl
-=
+\\ &=
 H ( 2 \pi r )
-=
+\\ &=
 \frac{B}{\mu_0} ( 2 \pi r ).
-\end{dmath}
+\end{aligned}
+\end{equation}
 
 The flux is
-\begin{dmath}\label{eqn:uwaves4TransmissionLines:400}
+\begin{equation}\label{eqn:uwaves4TransmissionLines:400}
+\begin{aligned}
 \Phi
-= \int \BB \cdot d\BA
-= \frac{\mu_0 I}{ 2 \pi } \int_A \inv{r} d dr
-= \frac{\mu_0 I}{ 2 \pi } \int_a^b \inv{r} l d dr
-= \frac{\mu_0 I l}{ 2 \pi } \ln \frac{b}{a}.
-\end{dmath}
+&= \int \BB \cdot d\BA
+\\ &= \frac{\mu_0 I}{ 2 \pi } \int_A \inv{r} d dr
+\\ &= \frac{\mu_0 I}{ 2 \pi } \int_a^b \inv{r} l d dr
+\\ &= \frac{\mu_0 I l}{ 2 \pi } \ln \frac{b}{a}.
+\end{aligned}
+\end{equation}
 
 The inductance per unit length is
 \begin{equation}\label{eqn:uwaves4TransmissionLines:420}
@@ -186,67 +202,73 @@ L = \frac{\Phi/l}{I} = \frac{\mu_0}{ 2 \pi } \ln \frac{b}{a}.
 
 For a lossless line where \( R = G = 0 \), we have \( \gamma = \sqrt{ (j \omega L)(j \omega C)} = j \omega \sqrt{L C} \),
 so the phase velocity for a (lossless) coaxial cable is
-\begin{dmath}\label{eqn:uwaves4TransmissionLines:440}
+\begin{equation}\label{eqn:uwaves4TransmissionLines:440}
+\begin{aligned}
 v_\phi
-= \frac{\omega}{\beta}
-= \frac{\omega}{\Imag(\gamma)}
-= \frac{\omega}{\omega \sqrt{LC})}
-= \frac{1}{\sqrt{LC})}.
-\end{dmath}
+&= \frac{\omega}{\beta}
+\\ &= \frac{\omega}{\Imag(\gamma)}
+\\ &= \frac{\omega}{\omega \sqrt{LC})}
+\\ &= \frac{1}{\sqrt{LC})}.
+\end{aligned}
+\end{equation}
 
 This gives
-\begin{dmath}\label{eqn:uwaves4TransmissionLines:460}
+\begin{equation}\label{eqn:uwaves4TransmissionLines:460}
+\begin{aligned}
 v_\phi^2
-= \inv{ L }  \inv{C}
-=
+&= \inv{ L }  \inv{C}
+\\ &=
 \frac{ 2 \pi }{ \mu_0 \ln \frac{b}{a} }
 \frac
 {\ln \frac{b}{a}}
 {2 \pi \epsilon_0 \epsilon_r }
-=
+\\ &=
 \frac{1 }{ \mu_0 \epsilon_0 \epsilon_r }
-=
+\\ &=
 \frac{1 }{ \mu_0 \epsilon }.
-\end{dmath}
+\end{aligned}
+\end{equation}
 
 So
-\begin{dmath}\label{eqn:uwaves4TransmissionLines:480}
+\begin{equation}\label{eqn:uwaves4TransmissionLines:480}
 v_\phi = \inv{\sqrt{\epsilon \mu_0}},
-\end{dmath}
+\end{equation}
 which is the speed of light in the medium (\(\epsilon_r\)) that fills the co-axial cable.
 
 This is \underline{not} a coincidence.  In any two-wire homogeneously filled transmission line, the phase velocity is equal to the speed of light in the unbounded medium that fills the line.
 
 The characteristic impedance (again assuming the lossless \( R = G = 0 \) case) is
-\begin{dmath}\label{eqn:uwaves4TransmissionLines:500}
+\begin{equation}\label{eqn:uwaves4TransmissionLines:500}
+\begin{aligned}
 Z_0
-= \sqrt{ \frac{\cancel{R} + j \omega L}{\cancel{G} + j \omega C} }
-= \sqrt{ \frac{L}{C} }
-= \sqrt{
+&= \sqrt{ \frac{\cancel{R} + j \omega L}{\cancel{G} + j \omega C} }
+\\ &= \sqrt{ \frac{L}{C} }
+\\ &= \sqrt{
 \frac{\mu_0}{ 2 \pi } \ln \frac{b}{a}
 \frac{ \ln \frac{b}{a} }
 {2 \pi \epsilon_0 \epsilon_r }
 }
-=
+\\ &=
 \sqrt{ \frac{\mu_0}{\epsilon} } \frac{ \ln \frac{b}{a} }{ 2 \pi }.
-\end{dmath}
+\end{aligned}
+\end{equation}
 
 Note that \( \eta = \sqrt{\mu_0/\epsilon_0} = 120 \pi \Omega \) is the intrinsic impedance of free space.  The values \( a, b \) in \cref{eqn:uwaves4TransmissionLines:500} can be used to tune the characteristic impedance of the transmission line.
 } % example
 \section{Lossless line.}
 \index{lossless line}
 The lossless case where \( R = G = 0 \) was considered above.  The results were
-\begin{dmath}\label{eqn:uwaves4TransmissionLines:540}
+\begin{equation}\label{eqn:uwaves4TransmissionLines:540}
 \gamma = j \omega \sqrt{ L C },
-\end{dmath}
+\end{equation}
 so \( \alpha = 0 \) and \( \beta = \omega \sqrt{LC} \), and the phase velocity was
-\begin{dmath}\label{eqn:uwaves4TransmissionLines:560}
+\begin{equation}\label{eqn:uwaves4TransmissionLines:560}
 v_\phi = \inv{\sqrt{LC}},
-\end{dmath}
+\end{equation}
 the characteristic impedance is
-\begin{dmath}\label{eqn:uwaves4TransmissionLines:580}
+\begin{equation}\label{eqn:uwaves4TransmissionLines:580}
 Z_0 = \sqrt{\frac{L}{C}},
-\end{dmath}
+\end{equation}
 and the signals are
 \begin{equation}\label{eqn:uwaves4TransmissionLines:600}
 \begin{aligned}
@@ -256,22 +278,25 @@ I(z) &= \inv{Z_0} \lr{ V_0^{+} e^{-j \beta z} - V_0^{-} e^{j \beta z} }
 \end{equation}
 
 In the time domain for an infinite line, we have
-\begin{dmath}\label{eqn:uwaves4TransmissionLines:620}
+\begin{equation}\label{eqn:uwaves4TransmissionLines:620}
+\begin{aligned}
 v(z, t)
-= \Real\lr{ V(z) e^{j \omega t} }
-= V_0^{+} \Real\lr{ e^{-j \beta z} e^{j \omega t} }
-= V_0^{+} \cos( \omega t - \beta z ).
-\end{dmath}
+&= \Real\lr{ V(z) e^{j \omega t} }
+\\ &= V_0^{+} \Real\lr{ e^{-j \beta z} e^{j \omega t} }
+\\ &= V_0^{+} \cos( \omega t - \beta z ).
+\end{aligned}
+\end{equation}
 
 In this case the shape and amplitude of the waveform are preserved as sketched in \cref{fig:deck4Txline:deck4TxlineFig7}.
 \imageFigure{../figures/ece1236-microwaves/deck4TxlineFig7}{Lossless line signal preservation.}{fig:deck4Txline:deck4TxlineFig7}{0.2}
 \section{Low loss line.}
 \index{low loss line}
 Assume \( R \ll \omega L \) and \( G \ll \omega C \).  In this case we have
-\begin{dmath}\label{eqn:uwaves4TransmissionLines:640}
+\begin{equation}\label{eqn:uwaves4TransmissionLines:640}
+\begin{aligned}
 \gamma
-= \sqrt{ (R + j \omega L) ( G + j \omega C ) }
-=
+&= \sqrt{ (R + j \omega L) ( G + j \omega C ) }
+\\ &=
 j \omega \sqrt{L C} \sqrt{
 \lr{ 1 + \frac{R}{j\omega L} }
 \lr{ 1 + \frac{G}{j\omega C} }
@@ -283,11 +308,11 @@ j \omega \sqrt{L C}
 \approx
 j \omega \sqrt{L C}
 \lr{ 1 + \frac{R}{2 j\omega L}  + \frac{G}{2 j\omega C} }
-=
+\\ &=
 j \omega \sqrt{L C}
 + j \omega \frac{R \sqrt{C/L}}{2 j\omega}
 + j \omega \frac{G \sqrt{L/C}}{2 j\omega}
-=
+\\ &=
 j \omega \sqrt{L C}
 +
 \inv{2} \lr{
@@ -295,7 +320,8 @@ R \sqrt{\frac{C}{L}}
 +
 G \sqrt{\frac{L}{C}}
 },
-\end{dmath}
+\end{aligned}
+\end{equation}
 so
 \begin{equation}\label{eqn:uwaves4TransmissionLines:660}
 \begin{aligned}
@@ -310,33 +336,37 @@ G \sqrt{\frac{L}{C}}
 \end{equation}
 
 Observe that this value for \( \beta \) is the same as the lossless case to first order.  We also have
-\begin{dmath}\label{eqn:uwaves4TransmissionLines:680}
+\begin{equation}\label{eqn:uwaves4TransmissionLines:680}
 Z_0
 = \sqrt{ \frac{R + j \omega L}{G + j \omega C} }
 \approx
 \sqrt{ \frac{L}{C} },
-\end{dmath}
+\end{equation}
 also the same as the lossless case.  We must also have \( v_\phi = 1/\sqrt{L C} \).  To consider a time domain signal note that
-\begin{dmath}\label{eqn:uwaves4TransmissionLines:700}
+\begin{equation}\label{eqn:uwaves4TransmissionLines:700}
+\begin{aligned}
 V(z)
-= V_0^{+} e^{-\gamma z}
-= V_0^{+} e^{-\alpha z} e^{-j \beta z},
-\end{dmath}
+&= V_0^{+} e^{-\gamma z}
+\\ &= V_0^{+} e^{-\alpha z} e^{-j \beta z},
+\end{aligned}
+\end{equation}
 so
-\begin{dmath}\label{eqn:uwaves4TransmissionLines:720}
+\begin{equation}\label{eqn:uwaves4TransmissionLines:720}
+\begin{aligned}
 v(z, t)
-= \Real \lr{ V(z) e^{j \omega t} }
-= \Real \lr{ V_0^{+} e^{-\alpha z} e^{-j \beta z} e^{j \omega t} }
-= V_0^{+} e^{-\alpha z} \cos( \omega t - \beta z ).
-\end{dmath}
+&= \Real \lr{ V(z) e^{j \omega t} }
+\\ &= \Real \lr{ V_0^{+} e^{-\alpha z} e^{-j \beta z} e^{j \omega t} }
+\\ &= V_0^{+} e^{-\alpha z} \cos( \omega t - \beta z ).
+\end{aligned}
+\end{equation}
 
 The phase factor can be written
-\begin{dmath}\label{eqn:uwaves4TransmissionLines:740}
+\begin{equation}\label{eqn:uwaves4TransmissionLines:740}
 \omega t - \beta z
 =
 \omega \lr{ t - \frac{\beta}{\omega} z }
 \omega \lr{ t - z/v_\phi },
-\end{dmath}
+\end{equation}
 so the signal still moves with the phase velocity \( v_\phi = 1/\sqrt{LC} \), but in a diminishing envelope as sketched in \cref{fig:deck4Txline:deck4TxlineFig8}.
 \imageFigure{../figures/ece1236-microwaves/deck4TxlineFig8}{Time domain envelope for low loss line.}{fig:deck4Txline:deck4TxlineFig8}{0.2}
 
@@ -353,24 +383,26 @@ Motivated by the early telegraphy days, when low loss materials were not availab
 \end{equation}
 
 When that is done we have
-\begin{dmath}\label{eqn:uwaves4TransmissionLines:780}
+\begin{equation}\label{eqn:uwaves4TransmissionLines:780}
+\begin{aligned}
 \gamma
-= \sqrt{ (R + j \omega L) ( G + j \omega C ) }
-= j \omega \sqrt{L C} \sqrt{
+&= \sqrt{ (R + j \omega L) ( G + j \omega C ) }
+\\ &= j \omega \sqrt{L C} \sqrt{
 \lr{ 1 + \frac{R}{j \omega L} }
 \lr{ 1 + \frac{G}{j \omega C} }
 }
-= j \omega \sqrt{L C} \sqrt{
+\\ &= j \omega \sqrt{L C} \sqrt{
 \lr{ 1 + \frac{R}{j \omega L} }
 \lr{ 1 + \frac{R}{j \omega L} }
 }
-= j \omega \sqrt{L C}
+\\ &= j \omega \sqrt{L C}
 \lr{ 1 + \frac{R}{j \omega L} }
-= R \sqrt{\frac{C}{L} }
+\\ &= R \sqrt{\frac{C}{L} }
 + j \omega \sqrt{L C}
-= \sqrt{R G }
+\\ &= \sqrt{R G }
 + j \omega \sqrt{L C}.
-\end{dmath}
+\end{aligned}
+\end{equation}
 
 We have
 \begin{equation}\label{eqn:uwaves4TransmissionLines:800}
@@ -404,12 +436,14 @@ I(0) &= \inv{Z_0} \lr{ V_0^{+} - V_0^{-} },
 \end{aligned}
 \end{equation}
 so
-\begin{dmath}\label{eqn:uwaves4TransmissionLines:880}
+\begin{equation}\label{eqn:uwaves4TransmissionLines:880}
+\begin{aligned}
 Z_\txtL
-= \frac{V(0)}{I(0)}
-= Z_0 \frac{ V_0^{+} + V_0^{-} }{ V_0^{+} - V_0^{-} }
-= Z_0 \frac{ 1 + \Gamma_\txtL }{1 - \Gamma_\txtL },
-\end{dmath}
+&= \frac{V(0)}{I(0)}
+\\ &= Z_0 \frac{ V_0^{+} + V_0^{-} }{ V_0^{+} - V_0^{-} }
+\\ &= Z_0 \frac{ 1 + \Gamma_\txtL }{1 - \Gamma_\txtL },
+\end{aligned}
+\end{equation}
 where
 \begin{equation}\label{eqn:uwaves4TransmissionLines:900}
 \Gamma_\txtL \equiv \frac{V_0^{-} }{V_0^{+}},
@@ -425,44 +459,46 @@ I(z) &= \frac{V_0^{+}}{Z_0} \lr{ e^{-j \beta z} - \Gamma_\txtL e^{+j \beta z} }.
 \end{equation}
 
 Observe that we can rearranging for \( \Gamma_\txtL \) in terms of the impedances
-\begin{dmath}\label{eqn:uwaves4TransmissionLines:940}
+\begin{equation}\label{eqn:uwaves4TransmissionLines:940}
 \lr{ 1 - \Gamma_\txtL } Z_\txtL = Z_0 \frac{ 1 + \Gamma_\txtL },
-\end{dmath}
+\end{equation}
 or
-\begin{dmath}\label{eqn:uwaves4TransmissionLines:960}
+\begin{equation}\label{eqn:uwaves4TransmissionLines:960}
 \Gamma_\txtL \lr{ Z_0 + Z_\txtL } = Z_\txtL - Z_0,
-\end{dmath}
+\end{equation}
 or
-\begin{dmath}\label{eqn:uwaves4TransmissionLines:980}
+\begin{equation}\label{eqn:uwaves4TransmissionLines:980}
 \Gamma_\txtL
 = \frac{Z_\txtL - Z_0}
 { Z_0 + Z_\txtL } .
-\end{dmath}
+\end{equation}
 \paragraph{Power}
 \index{power!time average}
 The average (time) power on the line is
-\begin{dmath}\label{eqn:uwaves4TransmissionLines:1000}
+\begin{equation}\label{eqn:uwaves4TransmissionLines:1000}
+\begin{aligned}
 P_{ \textrm{av}}
-= \inv{2} \Real\lr{ V(Z) I^\conj(z) }
-=
+&= \inv{2} \Real\lr{ V(Z) I^\conj(z) }
+\\ &=
 \inv{2} \Real
 \lr{
 V_0^{+} \lr{ e^{-j \beta z} + \Gamma_\txtL e^{+j \beta z} }
 \lr{\frac{V_0^{+}}{Z_0}}^\conj \lr{ e^{j \beta z} - \Gamma_\txtL^\conj e^{-j \beta z} }
 }
-= \frac{ \Abs{V_0^{+}}^2 }{2 Z_0 } \Real\lr{
+\\ &= \frac{ \Abs{V_0^{+}}^2 }{2 Z_0 } \Real\lr{
 1 + \Gamma_\txtL e^{2 j \beta z} - \Gamma_\txtL^\conj e^{-2 j \beta z} - \Abs{\Gamma_\txtL}^2
 }
-= \frac{ \Abs{V_0^{+}}^2 }{2 Z_0 } \lr{
+\\ &= \frac{ \Abs{V_0^{+}}^2 }{2 Z_0 } \lr{
 1 - \Abs{\Gamma_\txtL}^2
 }.
-\end{dmath}
+\end{aligned}
+\end{equation}
 where we've made use of the fact that \( Z_0 = \sqrt{L/C} \) is real for the lossless line, and the fact that a conjugate difference \( A - A^\conj = 2 j \Imag(A) \) is purely imaginary.
 
 This can be written as
-\begin{dmath}\label{eqn:uwaves4TransmissionLines:1020}
+\begin{equation}\label{eqn:uwaves4TransmissionLines:1020}
 P_{ \textrm{av}} = P^{+} - P^{-},
-\end{dmath}
+\end{equation}
 where
 \begin{equation}\label{eqn:uwaves4TransmissionLines:1040}
 \begin{aligned}
@@ -476,21 +512,25 @@ This difference is the power delivered to the load.  This is not z-dependent bec
 \index{return loss}
 \index{insertion loss}
 Return loss (dB) is defined as
-\begin{dmath}\label{eqn:uwaves4TransmissionLines:1060}
+\begin{equation}\label{eqn:uwaves4TransmissionLines:1060}
+\begin{aligned}
 \textrm{RL}
-= 10 \log_{10} \frac{P_{\textrm{inc}}}{P_{\textrm{refl}}}
-= 10 \log_{10} \inv{\Abs{\Gamma}^2}
-= -20 \log_{10} \Abs{\Gamma}.
-\end{dmath}
+&= 10 \log_{10} \frac{P_{\textrm{inc}}}{P_{\textrm{refl}}}
+\\ &= 10 \log_{10} \inv{\Abs{\Gamma}^2}
+\\ &= -20 \log_{10} \Abs{\Gamma}.
+\end{aligned}
+\end{equation}
 
 Insertion loss (dB) is defined as
-\begin{dmath}\label{eqn:uwaves4TransmissionLines:1080}
+\begin{equation}\label{eqn:uwaves4TransmissionLines:1080}
+\begin{aligned}
 \textrm{IL}
-= 10 \log_{10} \frac{P_{\textrm{inc}}}{P_{\textrm{trans}}}
-= 10 \log_{10} \frac{P^{+}}{P^{+} - P^{-}}
-= 10 \log_{10} \inv{1 - \Abs{\Gamma}^2}
-= -10 \log_{10} \lr{ 1 - \Abs{\Gamma}^2 }.
-\end{dmath}
+&= 10 \log_{10} \frac{P_{\textrm{inc}}}{P_{\textrm{trans}}}
+\\ &= 10 \log_{10} \frac{P^{+}}{P^{+} - P^{-}}
+\\ &= 10 \log_{10} \inv{1 - \Abs{\Gamma}^2}
+\\ &= -10 \log_{10} \lr{ 1 - \Abs{\Gamma}^2 }.
+\end{aligned}
+\end{equation}
 \section{Standing wave ratio}
 \index{standing wave ratio}
 Consider again the lossless loaded configuration of \cref{fig:deck4Txline:deck4TxlineFig9}.  Now let \( z = - l \), where \( l \) is the distance from the load.  The phasors at this point on the line are
@@ -502,12 +542,14 @@ I(-l) &= \frac{V_0^{+}}{Z_0} \lr{ e^{j \beta l} - \Gamma_\txtL  e^{-j \beta l} }
 \end{equation}
 
 The absolute voltage at this point is
-\begin{dmath}\label{eqn:uwaves4TransmissionLines:1120}
+\begin{equation}\label{eqn:uwaves4TransmissionLines:1120}
+\begin{aligned}
 \Abs{V(-l)}
-= \Abs{V_0^{+}} \Abs{ e^{j \beta l} + \Gamma_\txtL e^{-j \beta l} }
-= \Abs{V_0^{+}} \Abs{ 1 + \Gamma_\txtL e^{-2 j \beta l} }
-= \Abs{V_0^{+}} \Abs{ 1 + \Abs{\Gamma_\txtL} e^{j \Theta_\txtL} e^{-2 j \beta l} },
-\end{dmath}
+&= \Abs{V_0^{+}} \Abs{ e^{j \beta l} + \Gamma_\txtL e^{-j \beta l} }
+\\ &= \Abs{V_0^{+}} \Abs{ 1 + \Gamma_\txtL e^{-2 j \beta l} }
+\\ &= \Abs{V_0^{+}} \Abs{ 1 + \Abs{\Gamma_\txtL} e^{j \Theta_\txtL} e^{-2 j \beta l} },
+\end{aligned}
+\end{equation}
 where the complex valued \( \Gamma_\txtL \) is given by \( \Gamma_\txtL = \Abs{\Gamma_\txtL} e^{j \Theta_\txtL} \).
 
 This gives
@@ -538,31 +580,33 @@ Notes:
 \item Since \( 0 \le \Abs{\Gamma_\txtL} \le 1 \), we have \( 1 \le \textrm{SWR} \le \infty \).  The lower bound is for a matched line, and open, short, or purely reactive termination leads to the infinities.
 \item The distance between two successive maxima (or minima) can be determined by setting \( \Theta_\txtL - 2 \beta l = 2 k \pi \) for two consecutive values of \( k \).  For \( k = 0 \), suppose that \( V_{\mathrm{max}} \) occurs at \( d_1 \)
 
-\begin{dmath}\label{eqn:uwaves4TransmissionLines:1220}
+\begin{equation}\label{eqn:uwaves4TransmissionLines:1220}
 \Theta_\txtL - 2 \beta d_1 = 2 (0) \pi,
-\end{dmath}
+\end{equation}
 or
-\begin{dmath}\label{eqn:uwaves4TransmissionLines:1240}
+\begin{equation}\label{eqn:uwaves4TransmissionLines:1240}
 d_1 = \frac{\Theta_\txtL}{2 \beta}.
-\end{dmath}
+\end{equation}
 
 For \( k = 1 \), let the max occur at \( d_2 \)
-\begin{dmath}\label{eqn:uwaves4TransmissionLines:1260}
+\begin{equation}\label{eqn:uwaves4TransmissionLines:1260}
 \Theta_\txtL - 2 \beta d_2 = 2 (1) \pi,
-\end{dmath}
+\end{equation}
 or
-\begin{dmath}\label{eqn:uwaves4TransmissionLines:1280}
+\begin{equation}\label{eqn:uwaves4TransmissionLines:1280}
 d_2 = \frac{\Theta_\txtL - 2 \pi}{2 \beta}.
-\end{dmath}
+\end{equation}
 
 The difference is
-\begin{dmath}\label{eqn:uwaves4TransmissionLines:1300}
+\begin{equation}\label{eqn:uwaves4TransmissionLines:1300}
+\begin{aligned}
 d_1 - d_2
-= \frac{\Theta_\txtL}{2 \beta} - \frac{\Theta_\txtL - 2 \pi}{2 \beta}
-= \frac{\pi}{\beta}
-= \frac{\pi}{2 \pi/\lambda}
-= \frac{\lambda}{2}.
-\end{dmath}
+&= \frac{\Theta_\txtL}{2 \beta} - \frac{\Theta_\txtL - 2 \pi}{2 \beta}
+\\ &= \frac{\pi}{\beta}
+\\ &= \frac{\pi}{2 \pi/\lambda}
+\\ &= \frac{\lambda}{2}.
+\end{aligned}
+\end{equation}
 
 The distance between two consecutive maxima (or minima) of the SWR is \( \lambda/2 \).
 \end{itemize}
@@ -572,9 +616,9 @@ Referring to \cref{fig:deck4Txline:deck4TxlineFig11}, let's solve for the impeda
 \imageFigure{../figures/ece1236-microwaves/deck4TxlineFig11}{Configuration for impedance transformation.}{fig:deck4Txline:deck4TxlineFig11}{0.2}
 
 At any point on the line we have
-\begin{dmath}\label{eqn:uwaves4TransmissionLinesCore:1320}
+\begin{equation}\label{eqn:uwaves4TransmissionLinesCore:1320}
 V(z) = V_0^{+} e^{-j \beta z} \lr{ 1 + \Gamma_\txtL e^{2 j \beta z} },
-\end{dmath}
+\end{equation}
 so at the load and input we have
 \begin{equation}\label{eqn:uwaves4TransmissionLinesCore:1340}
 \begin{aligned}
@@ -597,28 +641,32 @@ I(-l) = \frac{V^{+}}{Z_0} \lr{ 1 - \Gamma_\txtL(-1) }.
 
 Define an input impedance as
 \index{input impedance}
-\begin{dmath}\label{eqn:uwaves4TransmissionLinesCore:1400}
+\begin{equation}\label{eqn:uwaves4TransmissionLinesCore:1400}
+\begin{aligned}
 Z_{\textrm{in}}
-= \frac{V(-l)}{I(-l)}
-= Z_0 \frac{1 + \Gamma_\txtL(-1)}{1 - \Gamma_\txtL(-1)}
-\end{dmath}
+&= \frac{V(-l)}{I(-l)}
+\\ &= Z_0 \frac{1 + \Gamma_\txtL(-1)}{1 - \Gamma_\txtL(-1)}
+\end{aligned}
+\end{equation}
 
 This is analogous to
-\begin{dmath}\label{eqn:uwaves4TransmissionLinesCore:1420}
+\begin{equation}\label{eqn:uwaves4TransmissionLinesCore:1420}
 Z_\txtL
 = Z_0 \frac{1 + \Gamma_\txtL}{1 - \Gamma_\txtL}.
-\end{dmath}
+\end{equation}
 
 From \cref{eqn:uwaves4TransmissionLines:980}, we have
-\begin{dmath}\label{eqn:uwaves4TransmissionLinesCore:1440}
+\begin{equation}\label{eqn:uwaves4TransmissionLinesCore:1440}
+\begin{aligned}
 Z_{\textrm{in}}
-= Z_0 \frac{Z_0 + Z_\txtL + \lr{Z_\txtL - Z_0} e^{-2 j \beta l}}{Z_0 + Z_\txtL - \lr{Z_\txtL - Z_0} e^{-2 j \beta l}}
-= Z_0 \frac{\lr{Z_0 + Z_\txtL} e^{j\beta l} + \lr{Z_\txtL - Z_0} e^{- j \beta l}}{\lr{Z_0 + Z_\txtL} e^{j\beta l} - \lr{Z_\txtL - Z_0} e^{- j \beta l}}
-= Z_0
+&= Z_0 \frac{Z_0 + Z_\txtL + \lr{Z_\txtL - Z_0} e^{-2 j \beta l}}{Z_0 + Z_\txtL - \lr{Z_\txtL - Z_0} e^{-2 j \beta l}}
+\\ &= Z_0 \frac{\lr{Z_0 + Z_\txtL} e^{j\beta l} + \lr{Z_\txtL - Z_0} e^{- j \beta l}}{\lr{Z_0 + Z_\txtL} e^{j\beta l} - \lr{Z_\txtL - Z_0} e^{- j \beta l}}
+\\ &= Z_0
 \frac
 {Z_\txtL \cos( \beta l ) + j Z_0 \sin(\beta l ) }
 {Z_0 \cos( \beta l ) + j Z_\txtL \sin(\beta l ) },
-\end{dmath}
+\end{aligned}
+\end{equation}
 or
 \boxedEquation{eqn:uwaves4TransmissionLinesCore:1460}{
 Z_{\textrm{in}} =
