--- a/uwavesDeck5SmithChartCore.tex
+++ b/uwavesDeck5SmithChartCore.tex
@@ -25,34 +25,38 @@ Z_{\textrm{in}}
 
 %At the load
 %
-%\begin{dmath}\label{eqn:uwavesDeck5SmithChartCore:60}
+%\begin{equation}\label{eqn:uwavesDeck5SmithChartCore:60}
+%\begin{aligned}
 %\Gamma_\txtL
-%= \frac{Z_\txtL - Z_0}{Z_\txtL + Z_0}
-%= -1,
-%\end{dmath}
+%&= \frac{Z_\txtL - Z_0}{Z_\txtL + Z_0}
+%\\ &= -1,
+%\end{aligned}
+%\end{equation}
 %
 %so
 
 For short line sections \( \beta l \ll \pi/2 \), or \( l \ll \lambda/4 \), the input impedance is approximately
 
-\begin{dmath}\label{eqn:uwavesDeck5SmithChartCore:80}
+\begin{equation}\label{eqn:uwavesDeck5SmithChartCore:80}
 Z_{\textrm{in}}
 = j Z_0 \tan(\beta l)
 \approx j Z_0 \sin(\beta l)
 \approx j Z_0 \beta l
-\end{dmath}
+\end{equation}
 
 Introducing an equivalent inductance defined by \( Z_{\textrm{in}} = j \omega L_{\mathrm{eq}} \), we have
 
-\begin{dmath}\label{eqn:uwavesDeck5SmithChartCore:100}
+\begin{equation}\label{eqn:uwavesDeck5SmithChartCore:100}
+\begin{aligned}
 L_{\mathrm{eq}}
-=
+&=
 \frac{Z_0}{\omega} \beta l
-=
+\\ &=
 \frac{Z_0}{\omega} \frac{\omega}{v_\phi} l
-=
+\\ &=
 \frac{Z_0 l}{v_\phi}.
-\end{dmath}
+\end{aligned}
+\end{equation}
 
 The inductance per unit length of the line is \( C = Z_0/v_\phi \).  An application for this result is that instead of using inductors, shorted stubs can be used in high frequency applications.
 
@@ -67,31 +71,35 @@ An open circuited line is sketched in \cref{fig:deck5smithChartsAndImpedenceTx:d
 
 This time with \( Z_\txtL \rightarrow \infty \) we have
 
-\begin{dmath}\label{eqn:uwavesDeck5SmithChartCore:120}
+\begin{equation}\label{eqn:uwavesDeck5SmithChartCore:120}
+\begin{aligned}
 Z_{\textrm{in}}
-= Z_0 \frac{ Z_\txtL + j Z_0 \tan(\beta l) }{ Z_0 + j Z_\txtL \tan(\beta l)}
-= -j Z_0 \cot(\beta l).
-\end{dmath}
+&= Z_0 \frac{ Z_\txtL + j Z_0 \tan(\beta l) }{ Z_0 + j Z_\txtL \tan(\beta l)}
+\\ &= -j Z_0 \cot(\beta l).
+\end{aligned}
+\end{equation}
 
 This time we have an equivalent capacitance.  For short sections with \( \beta l \ll \pi/2 \)
 
-\begin{dmath}\label{eqn:uwavesDeck5SmithChartCore:140}
+\begin{equation}\label{eqn:uwavesDeck5SmithChartCore:140}
 Z_{\textrm{in}}
 \approx
 -j \frac{Z_0}{\beta l}
-\end{dmath}
+\end{equation}
 
 Introducing an equivalent capacitance defined by \( Z_{\textrm{in}} = 1/(j \omega C_{\mathrm{eq}}) \), we have
 
-\begin{dmath}\label{eqn:uwavesDeck5SmithChartCore:160}
+\begin{equation}\label{eqn:uwavesDeck5SmithChartCore:160}
+\begin{aligned}
 C_{\mathrm{eq}}
-=
+&=
 \frac{ \beta l}{\omega Z_0}
-=
+\\ &=
 \frac{ \omega/v_\phi l}{\omega Z_0}
-=
+\\ &=
 \frac{ l}{v_\phi Z_0}
-\end{dmath}
+\end{aligned}
+\end{equation}
 
 The capacitance per unit length of the line is \( C = 1/(Z_0 v_\phi) \).
 
@@ -106,19 +114,23 @@ A half wavelength transmission line equivalent circuit is sketched in \cref{fig:
 
 With \( l = \lambda/2 \)
 
-\begin{dmath}\label{eqn:uwavesDeck5SmithChartCore:180}
+\begin{equation}\label{eqn:uwavesDeck5SmithChartCore:180}
+\begin{aligned}
 \beta l
-= \frac{2 \pi}{\lambda} \frac{\lambda}{2}
-= \pi.
-\end{dmath}
+&= \frac{2 \pi}{\lambda} \frac{\lambda}{2}
+\\ &= \pi.
+\end{aligned}
+\end{equation}
 
 Since \( \tan \pi = 0 \), the input impedance is
 
-\begin{dmath}\label{eqn:uwavesDeck5SmithChartCore:200}
+\begin{equation}\label{eqn:uwavesDeck5SmithChartCore:200}
+\begin{aligned}
 Z_{\textrm{in}}
-= Z_0 \frac{ Z_\txtL + j Z_0 \tan(\beta l) }{ Z_0 + j Z_\txtL \tan(\beta l)}
-= Z_\txtL.
-\end{dmath}
+&= Z_0 \frac{ Z_\txtL + j Z_0 \tan(\beta l) }{ Z_0 + j Z_\txtL \tan(\beta l)}
+\\ &= Z_\txtL.
+\end{aligned}
+\end{equation}
 
 \section{Quarter wavelength transformer.}
 \index{quarter wavelength transformer}
@@ -129,19 +141,23 @@ A quarter wavelength transmission line equivalent circuit is sketched in \cref{f
 
 With \( l = \lambda/4 \)
 
-\begin{dmath}\label{eqn:uwavesDeck5SmithChartCore:220}
+\begin{equation}\label{eqn:uwavesDeck5SmithChartCore:220}
+\begin{aligned}
 \beta l
-= \frac{2 \pi}{\lambda} \frac{\lambda}{4}
-= \frac{\pi}{2}.
-\end{dmath}
+&= \frac{2 \pi}{\lambda} \frac{\lambda}{4}
+\\ &= \frac{\pi}{2}.
+\end{aligned}
+\end{equation}
 
 We have \( \tan \beta l \rightarrow \infty \), so the input impedance is
 
-\begin{dmath}\label{eqn:uwavesDeck5SmithChartCore:240}
+\begin{equation}\label{eqn:uwavesDeck5SmithChartCore:240}
+\begin{aligned}
 Z_{\textrm{in}}
-= Z_0 \frac{ Z_\txtL + j Z_0 \tan(\beta l) }{ Z_0 + j Z_\txtL \tan(\beta l)}
-= \frac{Z_0^2}{Z_\txtL}.
-\end{dmath}
+&= Z_0 \frac{ Z_\txtL + j Z_0 \tan(\beta l) }{ Z_0 + j Z_\txtL \tan(\beta l)}
+\\ &= \frac{Z_0^2}{Z_\txtL}.
+\end{aligned}
+\end{equation}
 
 This relation
 
@@ -211,14 +227,16 @@ Z_{\textrm{in}} \rightarrow \overbar{Z}_{\textrm{in}} = \frac{Z_{\textrm{in}}}{Z
 
 so
 
-\begin{dmath}\label{eqn:uwavesDeck5SmithChartCore:400}
+\begin{equation}\label{eqn:uwavesDeck5SmithChartCore:400}
+\begin{aligned}
 \overbar{Z}_{\textrm{in}}
-= \frac{ 1 + \Gamma }{ 1 - \Gamma }
-= \frac{ (1 + \Gamma_r) + j \Gamma_i }{ (1 - \Gamma_r) - j \Gamma_i }
-= \frac{ \lr{ (1 + \Gamma_r) + j \Gamma_i}\lr{(1 - \Gamma_r) + j \Gamma_i} }{ (1 - \Gamma_r)^2 + \Gamma_i^2 }
-= \frac{ (1 - \Gamma_r^2 - \Gamma_i^2) + j \Gamma_i (1 - \Gamma_r + 1 + \Gamma_r ) }{ (1 - \Gamma_r)^2 + \Gamma_i^2 }
-= \frac{ (1 - \Abs{\Gamma}^2) + 2 j \Gamma_i }{ (1 - \Gamma_r)^2 + \Gamma_i^2 }.
-\end{dmath}
+&= \frac{ 1 + \Gamma }{ 1 - \Gamma }
+\\ &= \frac{ (1 + \Gamma_r) + j \Gamma_i }{ (1 - \Gamma_r) - j \Gamma_i }
+\\ &= \frac{ \lr{ (1 + \Gamma_r) + j \Gamma_i}\lr{(1 - \Gamma_r) + j \Gamma_i} }{ (1 - \Gamma_r)^2 + \Gamma_i^2 }
+\\ &= \frac{ (1 - \Gamma_r^2 - \Gamma_i^2) + j \Gamma_i (1 - \Gamma_r + 1 + \Gamma_r ) }{ (1 - \Gamma_r)^2 + \Gamma_i^2 }
+\\ &= \frac{ (1 - \Abs{\Gamma}^2) + 2 j \Gamma_i }{ (1 - \Gamma_r)^2 + \Gamma_i^2 }.
+\end{aligned}
+\end{equation}
 
 If we let \( \overbar{Z}_{\textrm{in}} = \overbar{\Gamma}_\txtL + j \overbar{X}_\txtL \), and equate real and imaginary parts we have
 
@@ -245,22 +263,24 @@ which trace out circles in the \( \Gamma_r, \Gamma_i \) plane, one for the real 
 
 The circle for the real part is centered at
 
-\begin{dmath}\label{eqn:uwavesDeck5SmithChartCore:580}
+\begin{equation}\label{eqn:uwavesDeck5SmithChartCore:580}
 \lr{ \frac{\overbar{\Gamma}_\txtL}{1 + \overbar{\Gamma}_\txtL }, 0 },
-\end{dmath}
+\end{equation}
 
 with radius
-\begin{dmath}\label{eqn:uwavesDeck5SmithChartCore:600}
+\begin{equation}\label{eqn:uwavesDeck5SmithChartCore:600}
 \inv{1 + \overbar{\Gamma}_\txtL }.
-\end{dmath}
+\end{equation}
 
 All these circles pass through the point \( (1,0) \), since
-\begin{dmath}\label{eqn:uwavesDeck5SmithChartCore:620}
+\begin{equation}\label{eqn:uwavesDeck5SmithChartCore:620}
+\begin{aligned}
 \frac{\overbar{\Gamma}_\txtL}{1 + \overbar{\Gamma}_\txtL } + \inv{1 + \overbar{\Gamma}_\txtL }
-=
+&=
 \frac{1 + \overbar{\Gamma}_\txtL}{1 + \overbar{\Gamma}_\txtL }
-= 1.
-\end{dmath}
+\\ &= 1.
+\end{aligned}
+\end{equation}
 
 For reactive loads where \( \overbar{\Gamma}_\txtL = 0 \), we have \( \Gamma_r^2 + \Gamma_i^2 = 1 \), a circle through the origin with unit radius.
 
@@ -271,15 +291,15 @@ For matched loads where \( \overbar{\Gamma}_\txtL = 1 \) the circle is centered 
 
 The circle obtained by equating imaginary parts are constant reactance circles with center
 
-\begin{dmath}\label{eqn:uwavesDeck5SmithChartCore:640}
+\begin{equation}\label{eqn:uwavesDeck5SmithChartCore:640}
 \lr{ 1, \inv{\overbar{X}_\txtL } },
-\end{dmath}
+\end{equation}
 
 with radius
 
-\begin{dmath}\label{eqn:uwavesDeck5SmithChartCore:660}
+\begin{equation}\label{eqn:uwavesDeck5SmithChartCore:660}
 \inv{\overbar{X}_\txtL}.
-\end{dmath}
+\end{equation}
 
 These circles also pass through the point \( (1,0) \).  These circles are orthogonal to the constant resistance circles.  Some of the features of a Smith chart are sketched in \cref{fig:deck5smithChartsAndImpedenceTx:deck5smithChartsAndImpedenceTxFig7}.
 
@@ -296,25 +316,25 @@ A matlab produced blank Smith chart can be found in \cref{fig:smithchart:smithch
 
 Given
 
-\begin{dmath}\label{eqn:uwavesDeck5SmithChartCore:700}
+\begin{equation}\label{eqn:uwavesDeck5SmithChartCore:700}
 \overbar{Z} = \frac{1 + \Gamma}{1 - \Gamma},
-\end{dmath}
+\end{equation}
 
-\begin{dmath}\label{eqn:uwavesDeck5SmithChartCore:720}
+\begin{equation}\label{eqn:uwavesDeck5SmithChartCore:720}
 \Gamma = \Gamma_\txtL e^{-2 j \beta l},
-\end{dmath}
+\end{equation}
 
 and
 
-\begin{dmath}\label{eqn:uwavesDeck5SmithChartCore:740}
+\begin{equation}\label{eqn:uwavesDeck5SmithChartCore:740}
 \Gamma_\txtL = \Abs{\Gamma_\txtL} e^{j \Theta_\txtL }
-\end{dmath}
+\end{equation}
 
 The total reflection coefficient is
 
-\begin{dmath}\label{eqn:uwavesDeck5SmithChartCore:760}
+\begin{equation}\label{eqn:uwavesDeck5SmithChartCore:760}
 \Gamma = \Abs{\Gamma_\txtL} e^{j (\Theta_\txtL - 2 \beta l) }
-\end{dmath}
+\end{equation}
 
 If \( \Gamma_\txtL = \Abs{\Gamma_\txtL} e^{j \Theta_\txtL } \) is plotted on the Smith chart, then in order to move towards the generator, a subtraction from \( \Theta_\txtL \) of \( 2 \beta l \) is required.
 
