--- a/uwavesDeck5SmithChartCoreProblem.tex
+++ b/uwavesDeck5SmithChartCoreProblem.tex
@@ -11,52 +11,58 @@ Prove \cref{eqn:uwavesDeck5SmithChartCore:440}.
 
 We can write
 
-\begin{dmath}\label{eqn:uwavesDeck5SmithChartCore:460}
+\begin{equation}\label{eqn:uwavesDeck5SmithChartCore:460}
 (1 - \Gamma_r)^2 + \Gamma_i^2 = \frac{2 \Gamma_i }{\overbar{X}_\txtL},
-\end{dmath}
+\end{equation}
 
 or
 
-\begin{dmath}\label{eqn:uwavesDeck5SmithChartCore:480}
+\begin{equation}\label{eqn:uwavesDeck5SmithChartCore:480}
 (1 - \Gamma_r)^2 + \lr{ \Gamma_i - \inv{\overbar{X}_\txtL} }^2 = \inv{\lr{\overbar{X}_\txtL}^2},
-\end{dmath}
+\end{equation}
 
 which is one of the circular equations.  For the other, putting the \( \Gamma_r, \Gamma_i \) terms in the numerator, we have
 
-\begin{dmath}\label{eqn:uwavesDeck5SmithChartCore:500}
+\begin{equation}\label{eqn:uwavesDeck5SmithChartCore:500}
+\begin{aligned}
 \frac{1 - \Gamma_r^2  - \Gamma_i^2 }{\overbar{\Gamma}_\txtL}
-=
+&=
 (1 - \Gamma_r)^2 + \Gamma_i^2
-=
+\\ &=
 1 - 2 \Gamma_r + \Gamma_r^2 + \Gamma_i^2,
-\end{dmath}
+\end{aligned}
+\end{equation}
 
 or
-\begin{dmath}\label{eqn:uwavesDeck5SmithChartCore:520}
+\begin{equation}\label{eqn:uwavesDeck5SmithChartCore:520}
 \Gamma_r^2 \lr{ 1 + \inv{\overbar{\Gamma}_\txtL} } - 2 \Gamma_r + \Gamma_i^2 \lr{ 1 + \inv{\overbar{\Gamma}_\txtL} }
 =
 \inv{\overbar{\Gamma}_\txtL} - 1.
-\end{dmath}
+\end{equation}
 
 Dividing through by \( 1 + \ifrac{1}{\overbar{\Gamma}_\txtL} = (\overbar{\Gamma}_\txtL + 1)/\overbar{\Gamma}_\txtL \), we have
 
-\begin{dmath}\label{eqn:uwavesDeck5SmithChartCore:540}
+\begin{equation}\label{eqn:uwavesDeck5SmithChartCore:540}
+\begin{aligned}
 \Gamma_r^2 - 2 \Gamma_r \frac{ \overbar{\Gamma}_\txtL }{\overbar{\Gamma}_\txtL + 1} + \Gamma_i^2
-=
+&=
 \frac{1 - \overbar{\Gamma}_\txtL}{\overbar{\Gamma}_\txtL} \frac{ \overbar{\Gamma}_\txtL }{\overbar{\Gamma}_\txtL + 1}
-=
+\\ &=
 \frac{1 - \overbar{\Gamma}_\txtL}{ \overbar{\Gamma}_\txtL + 1},
-\end{dmath}
+\end{aligned}
+\end{equation}
 
 or
-\begin{dmath}\label{eqn:uwavesDeck5SmithChartCore:560}
+\begin{equation}\label{eqn:uwavesDeck5SmithChartCore:560}
+\begin{aligned}
 \lr{ \Gamma_r - \frac{ \overbar{\Gamma}_\txtL }{\overbar{\Gamma}_\txtL + 1} }^2 + \Gamma_i^2
-=
+&=
 \frac{1 - \overbar{\Gamma}_\txtL}{ \overbar{\Gamma}_\txtL + 1} + \lr{ \frac{ \overbar{\Gamma}_\txtL }{\overbar{\Gamma}_\txtL + 1} }^2
-=
+\\ &=
 \frac{ 1 - \overbar{\Gamma}_\txtL^2 + \overbar{\Gamma}_\txtL^2 }{\lr{\overbar{\Gamma}_\txtL + 1}^2}
-=
+\\ &=
 \frac{ 1 }{\lr{\overbar{\Gamma}_\txtL + 1}^2}.
-\end{dmath}
+\end{aligned}
+\end{equation}
 
 } % answer
