--- a/uwavesproblemSet1Problem1.tex
+++ b/uwavesproblemSet1Problem1.tex
@@ -26,33 +26,39 @@ If a voltage wave with time waveform \( V^{-}(t)\) is traveling along the line i
 
 In this case we have
 
-\begin{dmath}\label{eqn:uwavesproblemSet1Problem1:20}
-\gamma = \sqrt{(j \omega L')(j \omega C')} = j \omega \sqrt{L' C'}
-\end{dmath}
+\begin{equation}\label{eqn:uwavesproblemSet1Problem1:20}
+\begin{aligned}
+\gamma &= \sqrt{(j \omega L')(j \omega C')} \\ &= j \omega \sqrt{L' C'}
+\end{aligned}
+\end{equation}
 
 and impedance
 
-\begin{dmath}\label{eqn:uwavesproblemSet1Problem1:40}
+\begin{equation}\label{eqn:uwavesproblemSet1Problem1:40}
+\begin{aligned}
 Z_0
-= \frac{ \cancel{R'} + j \omega L' }{\gamma}
-= \frac{L'}{\sqrt{L' C' }}
-= \sqrt{\frac{L'}{C'}}
-= \sqrt{ \frac{ 6.5 \mu \si{H/m}}{ 8.7 \si{p F/m} } }
-= \sqrt{ \frac{ 6.5 \times 10^{-6} \si{H}}{ 8.7 \times 10^{-12} \si{F} } }
-= \sqrt{ \frac{ 6.5 }{ 8.7 } } \si{k} \Omega.
-= 0.86 \si{k} \Omega.
-\end{dmath}
+&= \frac{ \cancel{R'} + j \omega L' }{\gamma}
+\\ &= \frac{L'}{\sqrt{L' C' }}
+\\ &= \sqrt{\frac{L'}{C'}}
+\\ &= \sqrt{ \frac{ 6.5 \mu \si{H/m}}{ 8.7 \si{p F/m} } }
+\\ &= \sqrt{ \frac{ 6.5 \times 10^{-6} \si{H}}{ 8.7 \times 10^{-12} \si{F} } }
+\\ &= \sqrt{ \frac{ 6.5 }{ 8.7 } } \si{k} \Omega.
+\\ &= 0.86 \si{k} \Omega.
+\end{aligned}
+\end{equation}
 
 \makeSubAnswer{}{uwaves:problemSet1:1b}
 
 The phase velocity is
 
-\begin{dmath}\label{eqn:uwavesproblemSet1Problem1:60}
+\begin{equation}\label{eqn:uwavesproblemSet1Problem1:60}
+\begin{aligned}
 v_\phi
-= \frac{1}{\sqrt{L' C'}}
-= \frac{1}{\sqrt{ (6.5)(8.7) 10^{-6-12} \si{ (H/m) (F/m)} }}
-= 1.3 \times 10^8 \si{m/s},
-\end{dmath}
+&= \frac{1}{\sqrt{L' C'}}
+\\ &= \frac{1}{\sqrt{ (6.5)(8.7) 10^{-6-12} \si{ (H/m) (F/m)} }}
+\\ &= 1.3 \times 10^8 \si{m/s},
+\end{aligned}
+\end{equation}
 
 a factor of 23 less than the speed of light in vacuum.
 
@@ -62,29 +68,31 @@ A verification that \( \sqrt{\si{H/F}} \) is an Ohm, and that (\( 1/\sqrt{\si{(H
 
 The phasor voltage is
 
-\begin{dmath}\label{eqn:uwavesproblemSet1Problem1:80}
+\begin{equation}\label{eqn:uwavesproblemSet1Problem1:80}
 V = 10 \times e^{\beta z},
-\end{dmath}
+\end{equation}
 
 so the current phasor is
 
-\begin{dmath}\label{eqn:uwavesproblemSet1Problem1:100}
+\begin{equation}\label{eqn:uwavesproblemSet1Problem1:100}
 I = -\frac{10 V}{0.86 k\Omega} \times e^{\beta z},
-\end{dmath}
+\end{equation}
 
 We have
 
-\begin{dmath}\label{eqn:uwavesproblemSet1Problem1:120}
+\begin{equation}\label{eqn:uwavesproblemSet1Problem1:120}
+\begin{aligned}
 \beta
-= \omega \sqrt{L C}
-= \frac{\omega}{v_\phi},
-\end{dmath}
+&= \omega \sqrt{L C}
+\\ &= \frac{\omega}{v_\phi},
+\end{aligned}
+\end{equation}
 
 so
 
-\begin{dmath}\label{eqn:uwavesproblemSet1Problem1:140}
+\begin{equation}\label{eqn:uwavesproblemSet1Problem1:140}
 i(z,t) = -11.6 \cos\lr{ \omega( z/v_\phi + t ) } \si{mA},
-\end{dmath}
+\end{equation}
 
 where \( v_\phi \) is given by \cref{eqn:uwavesproblemSet1Problem1:60}.
 }
